# algCpt

./: README.md  kim.cpp
noilearning/: .anjuta_sym_db.db  configure  configure.ac
noilearning/.anjuta/session/: anjuta.session  dock-layout.xml
noilearning/Debug/: Makefile  config.h  config.status  libtool
noilearning/Debug/po/: Makefile  Makefile.in  POTFILES
noilearning/Debug/src/: Makefile  noilearning
noilearning/Debug/src/.deps/: main.Po
noilearning/autom4te.cache/: output.0  output.1  requests  traces.1
noilearning/src/: Makefile.am  Makefile.in  main.cc  main.cc~
